FIX z-index and display

--- a/reference/src/components/popup/popup.less
+++ b/reference/src/components/popup/popup.less
@@ -6,12 +6,11 @@
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 99;
+    z-index: 1;
     justify-content: center;
     align-items: center;
 }
 .overlay {
-    display: none;
     position: fixed;
     top: 0;
     bottom: 0;
